Platform compatibility layer to display PSF1 and PSF2 fonts, platform layer API revision

--- a/arch/x86_64/boot/uefi/GNUmakefile
+++ b/arch/x86_64/boot/uefi/GNUmakefile
@@ -76,7 +76,7 @@ override LDFLAGS += \
 	-lefi
 
 #override SRC := $(shell find -type f 2>/dev/null | LC_ALL=C sort)
-override SRC := $(shell find $(CURDIR)/../../../shared/boot/uefi -type f 2>/dev/null | LC_ALL=C sort)
+override SRC := $(shell find $(CURDIR)/../../../shared/boot/uefi $(CURDIR)/../../../shared/boot/shared -type f 2>/dev/null | LC_ALL=C sort)
 override C_SRC := $(filter %.c, $(SRC))
 override OBJ := $(addprefix $(OBJ_DIR)/, $(C_SRC:.c=.c.o)) # remember to use the slash, otherwise the path gets formatted as ../../obj/boot./[file]
 override HEADER_DEPS := $(addprefix $(OBJ_DIR), $(C_SRC:.c=.c.d))
