--- a/arch/x86_64/boot/bios/GNUmakefile
+++ b/arch/x86_64/boot/bios/GNUmakefile
@@ -1,11 +1,15 @@
 .SUFFIXES:
 
-BUILD_DIR := $(CURDIR)/../../../../build/boot
-OBJ_DIR := $(CURDIR)/../../../../obj/boot
-INCLUDE_DIR := $(CURDIR)/../../../../include
+BUILD_DIR := ../../../../build/boot
+OBJ_DIR := ../../../../obj/boot
+INCLUDE_DIR := ../../../../include
 
 override OUTPUT_MBR := $(BUILD_DIR)/boot_sect
-override OUTPUT_BINARY := $(BUILD_DIR)/boot
+override OUTPUT_STAGE1 := $(BUILD_DIR)/boot
+override OUTPUT_STAGE2 := $(BUILD_DIR)/boot_stage2
+
+override STAGE1_LINKER_SCRIPT := boot.ld
+override STAGE2_LINKER_SCRIPT := stage2/boot.ld
 
 TOOLCHAIN :=
 TOOLCHAIN_PREFIX :=
@@ -34,7 +38,7 @@ CPPFLAGS :=
 LDFLAGS :=
 FASMFLAGS :=
 
-LOG_QUIET := 1
+LOG_QUIET := 0
 
 # arg 1: command, arg 2: source, arg 3: out
 define log_step
@@ -54,7 +58,7 @@ endif
 
 override CFLAGS += \
     -Wall \
-    -Wextra \
+	-Wextra \
     -std=c11 \
     -ffreestanding \
     -fno-stack-protector \
@@ -85,25 +89,41 @@ override LDFLAGS += \
     -nostdlib \
     -static \
     -z max-page-size=0x1000 \
-    --gc-sections \
-    #-T $(LINKER_SCRIPT)
+    --gc-sections
 
-BOOT_ENTRY_ASM_FILE := $(CURDIR)/start.asm
+BOOT_ENTRY_ASM_FILE := boot_sect/start.asm
+SHARED_DIRECTORY := ../../../shared/boot/shared
 
-override SRC := $(shell find $(CURDIR)/../../../shared/boot/bios $(CURDIR)/../../../shared/boot/shared -type f 2>/dev/null | LC_ALL=C sort)
-override C_SRC := $(filter %.c, $(SRC))
-override ASM_SRC := $(filter %.asm, $(SRC))
-ASM_SRC := $(filter-out $(BOOT_ENTRY_ASM_FILE), $(ASM_SRC))
-override OBJ := $(addprefix $(OBJ_DIR)/, $(C_SRC:.c=.c.o) $(ASM_SRC:.asm=.asm.o)) # remember to use the slash, otherwise the path gets formatted as ../../obj/boot./[file]
+override STAGE1_SRC := $(shell find . -type f 2>/dev/null -not -path "./boot_sect/*" | LC_ALL=C sort)
+override STAGE1_C_SRC := $(filter %.c, $(STAGE1_SRC))
+override STAGE1_ASM_SRC := $(filter %.asm, $(STAGE1_SRC))
+override STAGE1_OBJ := $(addprefix $(OBJ_DIR)/, $(STAGE1_C_SRC:.c=.c.o) $(STAGE1_ASM_SRC:.asm=.asm.o)) # remember to use the slash, otherwise the path gets formatted as ../../obj/boot./[file]
 override HEADER_DEPS := $(addprefix $(OBJ_DIR), $(C_SRC:.c=.c.d))
 
-.PHONY: all
-all: $(OUTPUT_BINARY)
+#override STAGE2_SRC := $(shell find ../../../shared/boot/bios ../../../shared/boot/shared . -type f 2>/dev/null -not -path $(BOOT_ENTRY_ASM_FILE) | LC_ALL=C sort) TODO: uncomment later
 
+override STAGE2_SRC := $(shell find stage2 -type f 2>/dev/null | LC_ALL=C sort)
+override STAGE2_C_SRC := $(filter %.c, $(STAGE2_SRC))
+override STAGE2_ASM_SRC := $(filter %.asm, $(STAGE2_SRC))
+override STAGE2_OBJ := $(addprefix $(OBJ_DIR)/, $(STAGE2_C_SRC:.c=.c.o) $(STAGE2_ASM_SRC:.asm=.asm.o))
+
+.PHONY: all
+all: $(OUTPUT_STAGE2)
 -include $(HEADER_DEPS)
 
-$(OUTPUT_BINARY): GNUmakefile $(OBJ) $(BOOT_ENTRY_ASM_FILE) $(OBJ_DIR)/../libkernel.a
+# define stage 2 target, depends on stage 1
+
+$(OUTPUT_STAGE2): GNUmakefile $(OUTPUT_STAGE1) $(STAGE2_OBJ)
 	@mkdir -p "$(dir $@)"
+	$(call log_step, \
+		$(LD) $(LDFLAGS) -T$(STAGE2_LINKER_SCRIPT) $(STAGE2_OBJ) -o $@, \
+		$(STAGE2_OBJ), \
+		$@ \
+	)
+
+$(OUTPUT_STAGE1): GNUmakefile $(STAGE1_OBJ) $(BOOT_ENTRY_ASM_FILE) $(LINKER_SCRIPT)
+	@mkdir -p "$(dir $@)"
+	echo $(STAGE1_OBJ)
 	$(call log_step, \
 		fasm $(BOOT_ENTRY_ASM_FILE) $(OUTPUT_MBR), \
 		$(BOOT_ENTRY_ASM_FILE), \
@@ -111,8 +131,8 @@ $(OUTPUT_BINARY): GNUmakefile $(OBJ) $(BOOT_ENTRY_ASM_FILE) $(OBJ_DIR)/../libker
 	)
 	
 	$(call log_step, \
-		$(LD) $(LDFLAGS) $(OBJ) -o $@, \
-		$(OBJ), \
+		$(LD) $(LDFLAGS) -T$(STAGE1_LINKER_SCRIPT) $(STAGE1_OBJ) -o $@, \
+		$(STAGE1_OBJ), \
 		$@ \
 	)
 
@@ -129,7 +149,7 @@ $(OBJ_DIR)/%.asm.o: %.asm GNUmakefile
 	$(call log_step, \
 		fasm $(FASMFLAGS) $< $@, \
 		$<, \
-		$@
+		$@ \
 	)
 
 .PHONY: clean
